--- a/templates/views/user_maintenance_edit.html
+++ b/templates/views/user_maintenance_edit.html
@@ -3,81 +3,53 @@
 <!-- content -->
 {{block 'content'}}
 <div class="card">
+  <div class="card-header">
+    <h3 class="card-title font-weight-bold">
+      <i class="fas fa-user-plus"></i> Edit User
+    </h3>
+  </div>
   <form action="/user-maintenance/update/{{user._id.toString()}}" method="post" id="formUserUpdate">
     <div class="card-body">
-      <div class="form-group">
-        <label>First Name</label>
-        <input 
-          type="text" 
-          class="form-control form-control-sm" 
-          name="first_name" 
-          value="{{if user}}{{user.first_name}}{{/if}}" 
-        />
-        <small class="form-text text-danger" id="first_name_error"></small>
-      </div>
-      <div class="form-group">
-        <label>Last Name</label>
-        <input 
-          type="text" 
-          class="form-control form-control-sm" 
-          name="last_name" 
-          value="{{if user}}{{user.last_name}}{{/if}}" 
-        />
-        <small class="form-text text-danger" id="last_name_error"></small>
-      </div>
-      <div class="form-group">
-        <label>Phone Number</label>
-        <input 
-          type="text" 
-          class="form-control form-control-sm" 
-          name="phone_number" 
-          value="{{if user}}{{user.phone_number}}{{/if}}" 
-        />
-      </div>
-      <div class="form-group">
-        <label>Email</label>
-        <input 
-          type="email" 
-          class="form-control form-control-sm" 
-          name="email" 
-          value="{{if user}}{{user.email}}{{/if}}" 
-        />
-        <small class="form-text text-danger" id="email_error"></small>
-      </div>
-      <div class="form-group">
-        <label>Password</label>
-        <input 
-          type="password" 
-          class="form-control form-control-sm" 
-          name="password" 
-          value="{{if user}}{{user.password}}{{/if}}"
-        />
-        <small class="form-text text-danger" id="password_error"></small>
-      </div>
-      <div class="form-group">
-        <label>User Type</label>
-        <select class="form-control form-control-sm" name="type">
-          {{each USER_TYPE}}
-          <option 
-            value="{{$value}}"
-            {{if user}}{{if user.type == $value}}selected{{/if}}{{/if}}
-          >{{$value}}</option>
-          {{/each}}
-        </select>
-        <small class="form-text text-danger" id="type_error"></small>
-      </div>
-      <div class="form-group">
-        <label>User Status</label>
-        <select class="form-control form-control-sm" name="status">
-          {{each USER_STATUS}}
-          <option 
-            value="{{$value}}"
-            {{if user}}{{if user.status == $value}}selected{{/if}}{{/if}}
-          >{{$value}}</option>
-          {{/each}}
-        </select>
-        <small class="form-text text-danger" id="status_error"></small>
-      </div>
+      {{each user}}
+        {{if $index === 'type'}}
+          <div class="form-group">
+            <label>{{$index}}</label>
+            <select class="form-control form-control-sm" name="{{$index}}">
+              {{each USER_TYPE}}
+              <option 
+                value="{{$value}}"
+                {{if user}}{{if user.type == $value}}selected{{/if}}{{/if}}
+              >{{$value}}</option>
+              {{/each}}
+            </select>
+            <small class="form-text text-danger" id="{{$index}}_error"></small>
+          </div>
+        {{else if $index === 'status'}}
+          <div class="form-group">
+            <label>{{$index}}</label>
+            <select class="form-control form-control-sm" name="{{$index}}">
+              {{each USER_STATUS}}
+              <option 
+                value="{{$value}}"
+                {{if user}}{{if user.status == $value}}selected{{/if}}{{/if}}
+              >{{$value}}</option>
+              {{/each}}
+            </select>
+            <small class="form-text text-danger" id="{{$index}}_error"></small>
+          </div>
+        {{else if $index !== '_id'}}
+          <div class="form-group">
+            <label>{{$index | strReplace '_'}}</label>
+            <input 
+              type="text" 
+              class="form-control form-control-sm" 
+              name="{{$index}}" 
+              value="{{if user}}{{user[$index]}}{{/if}}" 
+            />
+            <small class="form-text text-danger" id="{{$index}}_error"></small>
+          </div>
+        {{/if}}
+      {{/each}}
     </div>
     <div class="card-footer">
       <div class="form-group">
